overflow fix

--- a/css/main.css
+++ b/css/main.css
@@ -31,12 +31,13 @@ body {
 	height: 100%;
 	font-family: 'Helvetica Nueue', 'Helvetica', serif;
 	color: white;
-	overflow-x: hidden;
 }
 
 .main {
-	width: 438px;
 	margin: 0 auto;
+	overflow-x: hidden;
+	width: 100%;
+	height: 100%;
 }
 
 /* ~iPhone */
